# vhip_walking_controller

./: CMakeLists.txt
etc/: VHIPWalking.conf.cmake
include/vhip_walking/: Contact.h  Controller.h  HRP4ForceCalibrator.h  State.h
include/vhip_walking/utils/: clamp.h
src/: CMakeLists.txt  Controller.cpp  FootstepPlan.cpp  HRP4ForceCalibrator.cpp  ModelPredictiveControl.cpp  Stabilizer.cpp
src/states/: DoubleSupport.cpp  Initial.cpp  SingleSupport.cpp  Standing.cpp
